c4prj2_input/grade.txt
Grading at Sat Aug  3 03:24:22 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:25:9: error: assignment to expression with array type
     num = NULL;
         ^
Compilation of input.c failed

Overall Grade: F
